# planner

./: .gitignore  .gitmodules  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_ARCHITECTURE.md  PROPOSAL.md  QUICK_REFERENCE.md  README.md  START_HERE.md  check_demo_feb4-6.py  check_first_week.py  check_null_dates.py  check_recent_demo.py  conftest.py  debug_daily_resources.py  debug_demolding.py  inspect_orders.py  pyproject.toml  requirements.txt  run_app.py  test_mold_qty_migration.py  todo
.github/: copilot-instructions.md
docs/: DECISIONES.md  PLAN_IMPLEMENTACION.md  configuracion.md  descripcion funcionalidadad.md  descripcion.txt  especificacion.md  formato_excel.md  foundry_production_planner_spec.md  manual-desarrollo.md  manual-usuario.md  modelo-datos.md  operacion.md  planificador  planner-implementation-plan.md  schema.md  solver_configuration.md  troubleshooting.md
sample_data/: MB52.xlsx  VP1501.XLSX  pedidos_ejemplo.xlsx
src/foundryplan/: app.py  logging_conf.py  settings.py
src/foundryplan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/foundryplanner/: app.py  settings.py
tests/: fixtures_real_data.py  test_db_schema.py  test_family_inference.py  test_home_queries.py  test_imports.py  test_job_creation.py  test_material_codes.py  test_metrics.py  test_metrics_config.py  test_priority.py  test_scheduler.py  test_scheduler_v2.py  test_split_retention.py  test_strategy_orchestrator.py  test_vision_alloy_filter.py
wheelhouse_linux_cp312_x86_64/: python_engineio-4.13.0-py3-none-any.whl  python_socketio-5.16.0-py3-none-any.whl
(+47 files in other folders)
