[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foundryplanner"
version = "0.1.0"
description = "FoundryPlanner: planificación estratégica + despacho táctico (NiceGUI + SQLite)"
requires-python = ">=3.14"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
