[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foundryplan"
version = "0.1.0"
description = "Foundry Plan - Planner & Dispatcher for make-to-order foundries (NiceGUI + SQLite)"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
